kubeflow-deployments/gcp-private-0527/.build/cert-manager/~g_v1_namespace_cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    image-prefix.kubeflow.org: '{"quay.io/jetstack": "gcr.io/gcp-project-dev/quay.io/jetstack"}'
  labels:
    app.kubernetes.io/component: cert-manager
    app.kubernetes.io/name: cert-manager
    kustomize.component: cert-manager
  name: cert-manager
