kubeflow-deployments/gcp-private-0527/.build/cert-manager/apps_v1_deployment_cert-manager-cainjector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image-prefix.kubeflow.org: '{"quay.io/jetstack": "gcr.io/gcp-project-dev/quay.io/jetstack"}'
  labels:
    app: cainjector
    app.kubernetes.io/component: cert-manager
    app.kubernetes.io/name: cert-manager
    kustomize.component: cert-manager
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cainjector
      app.kubernetes.io/component: cert-manager
      app.kubernetes.io/name: cert-manager
      kustomize.component: cert-manager
  template:
    metadata:
      annotations:
        image-prefix.kubeflow.org: '{"quay.io/jetstack": "gcr.io/gcp-project-dev/quay.io/jetstack"}'
      labels:
        app: cainjector
        app.kubernetes.io/component: cert-manager
        app.kubernetes.io/name: cert-manager
        kustomize.component: cert-manager
    spec:
      containers:
      - args:
        - --v=2
        - --leader-election-namespace=kube-system
        image: quay.io/jetstack/cert-manager-cainjector:v0.11.0
        imagePullPolicy: IfNotPresent
        name: cainjector
        resources: {}
      serviceAccountName: cert-manager-cainjector
