kubeflow-deployments/gcp-private-0527/.build/cert-manager/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_cert-manager-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-apiserver-ca: "true"
    image-prefix.kubeflow.org: '{"quay.io/jetstack": "gcr.io/gcp-private-dev/quay.io/jetstack",
      "metacontroller": "gcr.io/gcp-private-dev/metacontroller"}'
  labels:
    app: webhook
    app.kubernetes.io/component: cert-manager
    app.kubernetes.io/name: cert-manager
    kustomize.component: cert-manager
  name: cert-manager-webhook
webhooks:
- clientConfig:
    caBundle: ""
    service:
      name: kubernetes
      namespace: default
      path: /apis/webhook.cert-manager.io/v1beta1/validations
  failurePolicy: Fail
  name: webhook.certmanager.k8s.io
  rules:
  - apiGroups:
    - cert-manager.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - certificates
    - issuers
    - clusterissuers
    - certificaterequests
  sideEffects: None
